# 3d-chess

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: CLAUDE.md  ci.yml
.ralph/: README.md  ralph-history.json  ralph-loop.state.json  ralph-prompt.md  ralph-tasks.md
crates/chess_core/: CLAUDE.md  Cargo.toml
crates/chess_core/src/: board.rs  castling.rs  game.rs  lib.rs  mv.rs  pieces.rs  square.rs  status.rs  testing.rs
crates/chess_core/tests/: game_oracle.rs  regressions.rs  rules.rs
crates/chess_persistence/: CLAUDE.md  Cargo.toml  README.md
crates/chess_persistence/src/: lib.rs  snapshot.rs  store.rs
crates/chess_persistence/tests/: session_store.rs
crates/engine_uci/: CLAUDE.md  Cargo.toml  README.md
crates/engine_uci/src/: controller.rs  lib.rs  mock.rs
crates/engine_uci/tests/: controller.rs
crates/game_app/: CLAUDE.md  Cargo.toml  README.md
crates/game_app/src/: app.rs  automation.rs  automation_transport.rs  board_coords.rs  lib.rs  main.rs  match_state.rs  style.rs
crates/game_app/src/plugins/: app_shell.rs  app_shell_logic.rs  automation.rs  board_scene.rs  input.rs  menu.rs  mod.rs  move_feedback.rs  piece_view.rs  save_load.rs  save_load_logic.rs  scaffold.rs
crates/game_app/tests/: app_shell_logic.rs  automation_game_playthrough.rs  automation_harness.rs  automation_semantic_flow.rs  automation_transport.rs  binary_target.rs  board_mapping.rs  local_match_flow.rs  match_state_flow.rs  promotion_flow.rs  real_world_rounds.rs  save_load_flow.rs  save_load_logic.rs
docs/superpowers/plans/: 2026-03-18-ai-e2e-game-testing.md
docs/superpowers/specs/: 2026-03-18-ai-e2e-game-testing-design.md
plans/: agent-testing.md  honest-90-coverage-plan.md  implementation-plan.md  m2-3d-board-interaction-plan.md  m3-playable-game-loop-plan.md  milestones.md  ralph-prompt.md  ralph-run-pack.md  ralph-task-list.md  ralph-verification.md
tools/: run-game-wsl-x11.sh
tools/ci/: CLAUDE.md  README.md  coverage-workspace.sh  heavy-validation.sh  package-game-app.ps1  package-game-app.sh  parse_coverage.py  smoke-boot-linux.sh  smoke-boot-windows.ps1  smoke-headless-agent.sh
