[workspace]
members = [
    "crates/chess_core",
    "crates/chess_persistence",
    "crates/engine_uci",
    "crates/game_app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
bevy = "=0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
