[package]
name = "chess_persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chess_core = { path = "../chess_core" }
directories = "6.0.0"
serde.workspace = true
serde_json.workspace = true
tempfile = "3.27.0"
time = { version = "0.3.47", features = ["formatting"] }

[lints]
workspace = true
