# Feature-gated transport keeps the agent binary opt-in and preserves the GUI
# startup contract for the default `game_app` target. (ref: DL-005)

[package]
name = "game_app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "game_app"
path = "src/lib.rs"

[[bin]]
name = "game_app"
path = "src/main.rs"

[[bin]]
name = "game_app_agent"
path = "src/bin/game_app_agent.rs"
required-features = ["automation-transport"]

[features]
default = []
automation-transport = ["dep:serde", "dep:serde_json"]

[dependencies]
bevy.workspace = true
chess_core = { path = "../chess_core" }
chess_persistence = { path = "../chess_persistence" }
engine_uci = { path = "../engine_uci" }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.15.0"
chess_core = { path = "../chess_core", features = ["test-support"] }

[lints]
workspace = true
